# vidify-rs

./: Cargo.toml  README.md
config_macro/: Cargo.toml
config_macro/config_macro_derive/: Cargo.toml
config_macro/config_macro_derive/src/: lib.rs
config_macro/src/: lib.rs
core/: Cargo.toml
core/src/: base.rs  config.rs  data.rs  error.rs  lib.rs
core/src/api/: macos.rs  mod.rs  mpris.rs  spotifyweb.rs  windows.rs
core/src/lyrics/: mod.rs
core/src/player/: external.rs  mod.rs  mpv.rs
gui/: Cargo.toml
gui/src/: data.rs  main.rs
src/: config.rs  main.rs
src/api/: mod.rs  spotifyweb.rs  windows.rs
src/player/: mod.rs  mpv.rs
