[package]
name = "core"
version = "3.0.0-alpha"
authors = ["Mario Ortiz Manero <marioortizmanero@gmail.com>"]
license = "GPL-3.0+"
edition = "2018"

[dependencies]
strum = "0.18.0"
strum_macros = "0.18.0"

clap = { version = "2.33.1", default-features = false, features = [ "color" ] }
rust-ini = "0.15.3"
dirs = "3.0.0"

libmpv = "1.0.1"
rspotify = "0.10.0"

# config_macro = { path = "../config_macro" }

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.8.4"
