[package]
name = "core"
version = "3.0.0-alpha"
authors = ["Mario Ortiz Manero <marioortizmanero@gmail.com>"]
license = "GPL-3.0+"
edition = "2018"

[dependencies]
log = "0.4.11"
strum = "0.19.1"
strum_macros = "0.19.1"
structconf = "0.3.2"
clap = "2.33.1"
rust-ini = "0.15.3"
dirs = "3.0.0"
webbrowser = "0.5.4"

libmpv = "2.0.0"
rspotify = { version = "0.10.0", features = ["blocking"] }

[target.'cfg(target_os = "linux")'.dependencies]
mpris = "1.1.2"
